samples/_failures_safe/1761092206_941ebe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_604bc663.c: In function ‘main’:
./samples/SAFE/__tmp_604bc663.c:147:21: error: expected ‘)’ at end of input
  147 |     if (!read_matrix
      |        ~            ^
      |                     )
./samples/SAFE/__tmp_604bc663.c:147:5: error: expected declaration or statement at end of input
  147 |     if (!read_matrix
      |     ^~
